[project]
name = "imvtools"
version = "0.0.1"
description = "Toolkit used for financial, credit risk model validation."
authors = [
    {name = "Mantas Svazas",email = "svazas@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "imvtools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
